update base setup

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,5 +18,6 @@
     ],
     "ignorePatterns": ["dist/"],
     "rules": {
+        "@typescript-eslint/explicit-module-boundary-types": "off"
     }
 }
