--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "firebase": "^9.1.0",
     "joi": "^17.4.2",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.21",
     "mongoose": "^6.0.7",
     "multer": "^1.4.3"
   },
@@ -25,6 +26,7 @@
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^8.5.5",
+    "@types/lodash": "^4.14.175",
     "@types/mongoose": "^5.11.97",
     "@types/multer": "^1.4.7",
     "@types/node": "^16.9.6",
